--- a/css/whats-new.css
+++ b/css/whats-new.css
@@ -21,7 +21,7 @@ nav.toolbar {
     height: 45px;
     background-color: #f9f9f9;
     border-bottom: 1px solid lightgray;
-    padding: 10.5px 0px 10.5px 10px;
+    padding: 10.5px 10.5px 10.5px 10px;
 }
 
 div.java-versions {
@@ -35,4 +35,8 @@ div.java-versions {
 #clear-filter {
     cursor: pointer;
     color: #a94442;
+}
+
+nav.toolbar span.related {
+    float: right;
 }
